修改框架结构

--- a/Libra.Web/Libra.Web/Libra.Web.csproj
+++ b/Libra.Web/Libra.Web/Libra.Web.csproj
@@ -70,6 +70,8 @@
     <None Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
+    <Content Include="XmlConfig\log4net.config" />
+    <Content Include="XmlConfig\database.config" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
