--- a/Libra.Web/Libra.Web/Web.config
+++ b/Libra.Web/Libra.Web/Web.config
@@ -3,11 +3,24 @@
 <!--
   有关如何配置 ASP.NET 应用程序的详细信息，请访问
   http://go.microsoft.com/fwlink/?LinkId=169433
-  -->
-
+  --> 
 <configuration>
-    <system.web>
-      <compilation debug="true" targetFramework="4.0" />
-    </system.web>
+  <configSections>
+    <section name="redisconfig" type="Learun.Cache.Redis.RedisConfigInfo,Learun.Cache.Redis" />
+    <section name="unity" type="Microsoft.Practices.Unity.Configuration.UnityConfigurationSection,Microsoft.Practices.Unity.Configuration" />
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="oracle.manageddataaccess.client" type="OracleInternal.Common.ODPMSectionHandler, Oracle.ManagedDataAccess, Version=4.121.2.0, Culture=neutral, PublicKeyToken=89b483f429c47342" />
+  </configSections>
+
+  <redisconfig configSource="XmlConfig\redis.config" />
+  <unity configSource="XmlConfig\ioc.config" />
+  <connectionStrings configSource="XmlConfig\database.config" />
+  <appSettings configSource="XmlConfig\system.config" />
+  <log4net configSource="XmlConfig\log4net.config" />
+  <system.web>
+    <compilation debug="true" targetFramework="4.0" />
+  </system.web>
 
 </configuration>
